# sierraV1

./: .env.example  .gitignore  README.md  pyproject.toml
data/airline/: tasks.json  users.json
docs/: adding_domains.md
runs/20260512_111605/: metrics.json  report.md
runs/20260512_115531/: episodes.json
runs/20260512_120058/: episodes.json  metrics.json  report.md
runs/20260512_152713/: episodes.json  metrics.json  report.md
runs/20260512_164757/: episodes.json
runs/20260512_172751/: episodes.json  metrics.json
runs/20260513_100055/: episodes.json  metrics.json  report.md
runs/20260513_101358/: episodes.json  metrics.json
runs/20260513_113843/: episodes.json  metrics.json  report.md
runs/20260513_114023/: episodes.json  metrics.json  report.md
runs/20260513_123357/: episodes.json  metrics.json  report.md
runs/20260513_124650/: episodes.json  metrics.json  report.md
src/taufreebench/: __init__.py  cli.py
src/taufreebench/agents/: anthropic_tool_agent.py  react_text_agent.py  rule_based_agent.py
src/taufreebench/core/: diff.py  environment.py  evaluator.py  serialization.py  tool.py  types.py
tau-benchv2/: .env.example  README.md
tau-benchv2/docs/: architecture.md  benchmark_validity.md  free_models.md
tau-benchv2/tests/: conftest.py  test_calibration.py  test_dataset_validation.py  test_dual_telecom.py  test_premature_transfer_guard.py  test_report_validity.py  test_retail_tools.py
tests/: test_environment.py  test_evaluator.py  test_failure_classification.py  test_metrics.py  test_model_registry.py
(+136 files in other folders)
