[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tau-free-bench"
version = "0.1.0"
description = "A free-first educational reimplementation of τ-bench for evaluating LLM tool agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.3"]
groq = ["groq>=0.4"]
openrouter = ["openai>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "google-generativeai>=0.3",
    "groq>=0.4",
    "openai>=1.0",
]

[project.scripts]
taufreebench = "taufreebench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/taufreebench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
